src/main/resources/kubernetes/app/nt-practice-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nt-practice-app
  labels:
    app: nt-plug
