src/main/resources/kubernetes/app/nt-practice-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nt-plug-deployment
  namespace: nt-practice-app
  labels:
    app: nt-plug
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nt-plug
  template:
    metadata:
      labels:
        app: nt-plug
    spec:
      containers:
        - name: nt-plug-container
          image: nt_first_practice:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
