src/main/resources/kubernetes/app/nt-practice-app-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nt-practice-app-nodeport
  namespace: nt-practice-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
      name: http
      protocol: TCP
  selector:
    app: nt-plug
