src/main/resources/kubernetes/app/nt-practice-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nt-practice-app-svc
  namespace: nt-practice-app
  labels:
    app: nt-plug
spec:
  selector:
    app: nt-plug
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
  sessionAffinity: None
